--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@vercel/analytics": "^1.0.1",
     "eslint": "8.37.0",
     "eslint-config-next": "13.3.0",
     "gsap": "^3.11.5",
