--- a/package.json
+++ b/package.json
@@ -12,9 +12,11 @@
     "@vercel/analytics": "^1.0.1",
     "eslint": "8.37.0",
     "eslint-config-next": "13.3.0",
+    "framer-motion": "^10.12.17",
     "gsap": "^3.11.5",
     "next": "13.3.0",
     "next-transpile-modules": "^10.0.0",
+    "popmotion": "^11.0.5",
     "react": "18.2.0",
     "react-dom": "18.2.0"
   },
